--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>DyLiN: Making Light Field Networks Dynamic</title>
+  <title>PyAFAR: Python-based Automated Facial Action Recognition library for use in Infants and Adults</title>
   <!-- Bootstrap -->
   <link href="./css/bootstrap-4.4.1.css" rel="stylesheet">
   <link href="./css/project.css" rel="stylesheet">
@@ -28,21 +28,23 @@
           </td>
         </div></p>
         <div class="col-12">
-          <h2>DyLiN: Making Light Field Networks Dynamic</h2>
-          <h5><strong>(CVPR 2023)</strong></h5>            
+          <h2>PyAFAR: Python-based Automated Facial Action Recognition library for use in Infants and Adults</h2>
+          <h5><strong>(ACII 2023)</strong></h5>            
           <!-- <h4 style="color:#5a6268;">Arxiv 2022</h4> -->
           <p></p>
           <h6>
           <div class="authors">
-            <a href="https://heng14.github.io/" target="_blank">Heng Yu</a><sup> 1</sup>&#160;&#160;
-            <a href="https://joeljulin.github.io/" target="_blank">Joel Julin</a><sup> 1</sup>&#160;&#160;
-            <a href="https://scholar.google.com/citations?user=rSqodggAAAAJ&hl=es" target="_blank">Zoltán Á Milacski </a><sup> 1</sup>&#160;&#160;
-            <a href="https://scholar.google.com/citations?user=AFaeUrYAAAAJ&hl=en" target="_blank">Koichiro Niinuma</a><sup> 2</sup>&#160;&#160;
-            <a href="https://www.laszlojeni.com/" target="_blank">László A. Jeni</a><sup> 1</sup>&#160;&#160;
+            <a href="https://heng14.github.io/" target="_blank">Saurabh Hinduja</a><sup> 1</sup><sup> 4</sup>&#160;&#160;
+            <a href="https://joeljulin.github.io/" target="_blank">Itir Onal Ertugrul</a><sup> 2</sup>&#160;&#160;
+            <a href="https://scholar.google.com/citations?user=rSqodggAAAAJ&hl=es" target="_blank">Maneesh Bilalpur </a><sup> 1</sup>&#160;&#160;
+            <a href="https://scholar.google.com/citations?user=AFaeUrYAAAAJ&hl=en" target="_blank"> Daniel S. Messinger</a><sup> 3</sup>&#160;&#160;
+            <a href="https://www.laszlojeni.com/" target="_blank">Jeffrey F. Cohn</a><sup> 1</sup>&#160;&#160;
           </div>
           <div class="affiliations">
-            <sup>1</sup>Carnegie Mellon University&#160;&#160;
-            <sup>2</sup>Fujitsu Research of America&#160;&#160;
+            <sup>1</sup>University of Pittsburgh&#160;&#160;
+            <sup>2</sup>Utrecht University&#160;&#160;
+            <sup>3</sup>University of Miami&#160;&#160;
+            <sup>4</sup>CGI Technologies and Solutions Inc&#160;&#160;
           </div>
           <br>
           <div class="row justify-content-center">
