--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       <div class="row">
         <div class="col-12">
           <h3><b>Acknowledgements</h3></b></h3>
-          <p class="text-left">This research was supported partially by Fujitsu. We thank Chaoyang Wang from Carnegie Mellon University for the helpful discussion.</p>
+          <p class="text-left">Development of PyAFAR was supported in part by NIH awards R01MH096951, R01GM105004, and UH3NS100549.</p>
           <br>
           </div>
         </div>
