--- a/index.html
+++ b/index.html
@@ -207,12 +207,13 @@
             <h3><b>Citation</b></h3>
                 <pre style="background-color: #e9eeef">
                   <code>
-    @article{yu2023dylin,
-      title={DyLiN: Making Light Field Networks Dynamic},
-      author={Yu, Heng and Julin, Joel and Milacski, Zoltan A and Niinuma, Koichiro and Jeni, Laszlo A},
-      journal={arXiv preprint arXiv:2303.14243},
-      year={2023}
-    }
+    @inproceedings{hindujapyafar,
+  title={PyAFAR: Python-based Automated Facial Action Recognition library for use in Infants and Adults},
+  author={Hinduja, Saurabh and Ertugrul, Itir Onal and Bilalpur, Maneesh and Messinger, Daniel S and Cohn, Jeffrey F},
+  booktitle={International Conference on Affective Computing and Intelligent Interaction},
+  year={2023},
+  organization={IEEE}
+}
                 </code></pre>
         </div>
       </div>
