Fixed hyperlinks and trimmed

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             </div>
             <p class="text-fig">Pipeline of PyAFAR.
             </p> 
-            <p class="text-left">PyAFAR has separate modules for facial landmark extraction, tracking and headpose prediction. It uses[MediaPipe](https://research.google/pubs/pub48292/) library for landmarks. Tracking is performed using the [FaceNet](https://www.cv-foundation.org/openaccess/content_cvpr_2015/papers/Schroff_FaceNet_A_Unified_2015_CVPR_paper.pdf). The Perspective-n-Point (PnP) method is used to predict Roll, Pitch and Yaw.
-            </p>
+            <p>PyAFAR has separate modules for facial feature extraction and tracking, Face normalization and AU predictions:</p>
+            <p class="text-left">It uses <a href="https://research.google/pubs/pub48292/">MediaPipe</a> library for landmarks. Tracking is performed using the <a href="https://www.cv-foundation.org/openaccess/content_cvpr_2015/papers/Schroff_FaceNet_A_Unified_2015_CVPR_paper.pdf">FaceNet</a>. The Perspective-n-Point (PnP) method is used to predict Roll, Pitch and Yaw.</p>
 
             <p class="text-left"> The landmark predictions are used to normalize faces using the [dlib](http://dlib.net/) library.</p>
             <p class="text-left"> Normalized faces are used for AU predictions (occurrence and intensity). Separate detection modules for occurrence are available for adults and infants. Intensity predictions are available for adults only.</p>
@@ -98,14 +98,14 @@
     <div class="container">
       <div class="row">
         <div class="col-12 text-center">
-          <h3><b>Video</b></h3>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/8UGWWYJrv3s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <h3><b>Demo</b></h3>
+          <iframe width="560" height="315" src="./images/pyafar_demo.git" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
   </section>
   <br>
-  <section>
+<!--   <section>
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -165,7 +165,7 @@
     </div>
   </section>
   <br>
-  <br>
+ -->  <br>
   <section>
     <div class="container">
       <div class="row">
