Updated the Docs button and bib indentation

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <div class="column">
               <p class="mb-5"><a class="btn btn-large btn-light" href="https://github.com/AffectAnalysisGroup/PyAFAR" role="button" target="_blank">
-                <i class="fa fa-github"></i> Code</a> </p>
+                <i class="fa fa-github"></i> Docs</a> </p>
             </div>
           </div>
         </div>
@@ -198,13 +198,13 @@
             <h3><b>Citation</b></h3>
                 <pre style="background-color: #e9eeef">
                   <code>
-                    @inproceedings{hindujapyafar,
-                  title={PyAFAR: Python-based Automated Facial Action Recognition library for use in Infants and Adults},
-                  author={Hinduja, Saurabh and Ertugrul, Itir Onal and Bilalpur, Maneesh and Messinger, Daniel S and Cohn, Jeffrey F},
-                  booktitle={International Conference on Affective Computing and Intelligent Interaction},
-                  year={2023},
-                  organization={IEEE}
-                  }
+  @inproceedings{hindujapyafar,
+  title={PyAFAR: Python-based Automated Facial Action Recognition library for use in Infants and Adults},
+  author={Hinduja, Saurabh and Ertugrul, Itir Onal and Bilalpur, Maneesh and Messinger, Daniel S and Cohn, Jeffrey F},
+  booktitle={International Conference on Affective Computing and Intelligent Interaction},
+  year={2023},
+  organization={IEEE}
+  }
                 </code></pre>
         </div>
       </div>
