added how to use section

--- a/index.html
+++ b/index.html
@@ -109,6 +109,21 @@
     </div>
   </section>
   <br>
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center">
+          <h3><b>How to use</b></h3>
+          <!-- <iframe width="560" height="315" src="./images/pyafar_demo.git" title="YouTube video player" frameborder="0" allowfullscreen></iframe> -->
+          <!-- added demo video -->
+            <div class="col" style="text-align:center">
+              <img class="thumbnail" src="./images/how_to_use.gif" style="width:80%; margin-bottom:20px">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <br>
 <!--   <section>
     <div class="container">
       <div class="row">
