--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             <div class="col" style="text-align:center">
               <img class="thumbnail" src="./images/pyafar_demo.gif" style="width:80%; margin-bottom:20px">
           </div>
+          <p>Interested in learning more about Facial Action Coding System (FACS) for Action Unit annotation? Visit this <a href="https://sites.pitt.edu/~jeffcohn/FACSmodule.html">interactive application</a></p>
         </div>
       </div>
     </div>
