Added infant afar not available line

--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
   </section>
 
   <section>
+    <div class="col-12 text-center">
+    <h5><font color="red">Release of the Infant models for PyAFAR has been delayed due to technical difficulties. Stay tuned for updates.</font></h5>
+  </div>
+  </section>
+
+  <section>
     <div class="jumbotron-grey">
       <div class="row">
         <div class="col-12 text-center">
